<resources>
    <string name="app_name">ROBOT</string>
    <string name="Rec">REC</string>
    <string name="View">VIEW</string>
    <string name="boutonH">Homme</string>
    <string name="boutonF">Femme</string>
    <string name="boutonV">CONTINUER\nVERS\nAPPLICATION</string>
    <string name="title_activity_launcher">Launcher</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_test_launcher">TestLauncher</string>
    <string name="title_activity_lecture">Lecture</string>

    <string name="boutonChewbacca">Chewbacca</string>
    <string name="boutonIMarch">La Marche Impériale</string>
    <string name="boutonMaitre">Que puis-je faire pour vous, Maître ?</string>
    <string name="boutonPere">Je suis … Ton Père !</string>
    <string name="musiques_de_l_app">Musiques de l\'app</string>
</resources>
