<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="android.test.robot.Lecture">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingEnd="80dp"
            android:paddingStart="40dp"
            android:weightSum="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/musiques_de_l_app"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/group_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checkedButton="@+id/radio2"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioChewbacca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boutonChewbacca"
                    android:textSize="17sp"
                    android:onClick="launchMusic"/>

                <RadioButton
                    android:id="@+id/radioIMarch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boutonIMarch"
                    android:textSize="17sp"
                    android:onClick="launchMusic"/>
                <RadioButton
                    android:id="@+id/radioMaitre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boutonMaitre"
                    android:textSize="17sp"
                    android:onClick="launchMusic"/>
                <RadioButton
                    android:id="@+id/radioPere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boutonPere"
                    android:textSize="17sp"
                    android:onClick="launchMusic"/>
            </RadioGroup>

        </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
