<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"
        android:orientation="horizontal"
        android:descendantFocusability="blocksDescendants">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Préférence"
            android:onClick="preference"/>

    </RelativeLayout>





    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backgroundlauncher">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/roundedlayout_launcher"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="40dp"
            android:paddingLeft="40dp"
            android:layout_marginTop="151dp"
            android:layout_marginLeft="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">


            <RadioGroup
                android:id="@+id/group_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio2"
                android:paddingRight="40dp"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boutonH" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boutonF"/>
            </RadioGroup>

            <Button
                android:background="@drawable/roundedbutton_launcher"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonV"
                android:onClick="saveSetting"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
